-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
Fully Compatible
-
ALL
-
v3.2
-
Integration 10 (02/22/16)
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A false return indicates that the directory already exists, it is not used to signal errors.
Original description: Coverity analysis defect 73690: Unchecked return value
Value returned from a function is not checked for errors before being used
Defect 73690 (STATIC_C)
Checker CHECKED_RETURN (subcategory none)
File: /src/mongo/db/sorter/sorter.cpp
Function mongo::SortedFileWriter<mongo::Value, mongo::Document>::SortedFileWriter(const mongo::SortOptions &, const std::pair<mongo::Value::SorterDeserializeSettings, mongo::Document::SorterDeserializeSettings> &)
/src/mongo/db/sorter/sorter.cpp, line: 817
Calling "create_directories" without checking return value (as is done elsewhere 1 out of 2 times).
boost::filesystem::create_directories(opts.tempDir);
File: /src/mongo/db/sorter/sorter.cpp
Function mongo::SortedFileWriter<mongo::Value, mongo::Value>::SortedFileWriter(const mongo::SortOptions &, const std::pair<mongo::Value::SorterDeserializeSettings, mongo::Value::SorterDeserializeSettings> &)
/src/mongo/db/sorter/sorter.cpp, line: 817
Calling "create_directories" without checking return value (as is done elsewhere 1 out of 2 times).
boost::filesystem::create_directories(opts.tempDir);