SERVER-20352 Correctly check for errors from boost::filesystem::create_directories